bugfix: coordinate display overlaps with buttons in fullscreen mode

--- a/htdocs/css/run.css
+++ b/htdocs/css/run.css
@@ -262,6 +262,6 @@
 
 .jo_control-container{
     position: absolute;
-    right: 40px;
+    right: 150px;
     top: 4px;
 }
