--- a/htdocs/js.webpack/javaOnlineEmbedded.css
+++ b/htdocs/js.webpack/javaOnlineEmbedded.css
@@ -3227,7 +3227,7 @@ svgns|path.dropdown-triangle:active {
 
 .jo_control-container{
     position: absolute;
-    right: 40px;
+    right: 150px;
     top: 4px;
 }
 /* roboto-regular - latin */
@@ -3418,11 +3418,14 @@ svgns|path.dropdown-triangle:active {
     font-family: 'Roboto', sans-serif;
     /* font-weight: 500; */
     font-size: 10pt;
-    margin: 1em 0;
+    margin: 1em 0 2em 0;
     background-image: url(../assets/projectexplorer/svg-loaders/grid.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 5%;
+    border-radius: 3px;
+    border: 1px solid #a0a0a0;
+    box-shadow: 5px 5px 20px 1px #9e9e9e;
 }
 
 .joe_javaOnlineDiv  li {
